--- a/public/Dashboard/Tutor.html
+++ b/public/Dashboard/Tutor.html
@@ -18,17 +18,26 @@
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-functions.js"></script>
 
+    <!-- full calendar -->
+    <link href="https://cdn.jsdelivr.net/npm/fullcalendar@5.8.0/main.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.7.2/main.min.js"></script>
+
+    <!-- semantic UI -->
+    <link async rel="stylesheet" href="//cdn.jsdelivr.net/npm/semantic-ui@2.0.3/dist/semantic.min.css"/>
+    <script async src="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
+
     <script src="../Site Templates/site-wide.js"></script>
+    <script src="../Site Templates/generalFunctions.js"></script>
     <script src="Tutor.js"></script>
 
   </head>
 
-  <body>
+  <body onload="initialSetupData()">
     <section id="loading-screen">
       <div class="loading-ring"></div>
     </section>
 
-    <section id="navigationSection" class="add-user-section">
+    <!-- <section id="navigationSection" class="add-user-section">
       <div id="navigationModal">
         <div class="close" onclick="document.getElementById('navigationSection').style.display = 'none'">X</div>
         <h4 style="margin: 0;">Which lesson are you teaching today?</h4>
@@ -36,7 +45,7 @@
         <button id="subjectTutoringNav" class="button">Subject Tutoring</button>
         <button id="mathProgramNav" class="button">Math Program</button>
         <button id="phonicsProgramNav" class="button">Phonics Program</button>
-    </section>
+    </section> -->
 
     <section>
       <div class="header">
@@ -52,7 +61,7 @@
         </div>
       </div>
 
-      <div>
+      <!-- <div>
         <table id="student-table" class="display" width="100%">
           <thead>
             <tr>
@@ -62,6 +71,10 @@
             </tr>
           </thead>
         </table>
+      </div> -->
+
+      <div id="mainCalendarContent">
+        <div id='calendar'></div>
       </div>
 
       <!-- feedback area -->
