--- a/public/calendar.html
+++ b/public/calendar.html
@@ -76,10 +76,10 @@
       <button id="availabilitySelection" class="dropbtn">filter availability</button>
       <div class="dropdown-content">
         <div class="dropdown-right">
-          <div>Tutor</div>
+          <div>Staff</div>
           <div class="dropdown-content">
-            <select id="tutorAvailabilityContent" class="ui dropdown search selection" multiple>
-              <option value="">select tutor</option>
+            <select id="staffAvailabilityContent" class="ui dropdown search selection" multiple>
+              <option value="">select staff</option>
             </select>
           </div>
         </div>
@@ -114,10 +114,10 @@
         </div>
 
         <div class="dropdown-right">
-          <div>Tutor</div>
+          <div>Staff</div>
           <div class="dropdown-content">
-            <select id="tutorFilterContent" class="ui dropdown search selection" multiple>
-              <option value="">select tutor</option>
+            <select id="staffFilterContent" class="ui dropdown search selection" multiple>
+              <option value="">select staff</option>
             </select>
           </div>
         </div>
@@ -228,12 +228,12 @@
         <input id="addGeneralInfoTitle" name="addGeneralInfoTitle" class="input">
         <br>
 
-        <!-- tutor(s) attending the event -->
+        <!-- staff attending the event -->
         <div class="inputRow">
-          <div class="more-info " data-more-info="This is/are the tutor(s) getting paid during this event">?</div>
-          <label for="addGeneralInfoTutor" class="label">Tutor(s)</label>
+          <div class="more-info " data-more-info="This is/are the staff getting paid during this event">?</div>
+          <label for="addGeneralInfoStaff" class="label">Staff</label>
         </div>
-        <select id="addGeneralInfoTutor" name="addGeneralInfoTutor" class="ui dropdown search selection" multiple></select>
+        <select id="addGeneralInfoStaff" name="addGeneralInfoStaff" class="ui dropdown search selection" multiple></select>
         <br>
 
         <!-- buttons -->
@@ -259,12 +259,12 @@
         <input id="editGeneralInfoTitle" name="editGeneralInfoTitle" class="input nonEditable">
         <br>
 
-        <!-- tutor(s) attending the event -->
+        <!-- staff(s) attending the event -->
         <div class="inputRow">
-          <div class="more-info " data-more-info="This is/are the tutor(s) getting paid during this event">?</div>
-          <label for="editGeneralInfoTutor" class="label">Tutor(s)</label>
+          <div class="more-info " data-more-info="This is/are the staff getting paid during this event">?</div>
+          <label for="editGeneralInfoStaff" class="label">Staff</label>
         </div>
-        <select id="editGeneralInfoTutor" name="editGeneralInfoTutor" class="ui dropdown search selection" multiple></select>
+        <select id="editGeneralInfoStaff" name="editGeneralInfoStaff" class="ui dropdown search selection" multiple></select>
         <br>
 
         <!-- buttons -->
@@ -417,12 +417,12 @@
         <select id="addTestReviewStudent" name="addTestReviewStudent" class="ui dropdown search selection"></select>
         <br>
 
-        <!-- tutor(s) attending the test review -->
+        <!-- staff attending the test review -->
         <div class="inputRow">
-          <div class="more-info " data-more-info="This is/are the tutor(s) performing the test review">?</div>
-          <label for="addTestReviewTutor" class="label">Tutor(s)</label>
+          <div class="more-info " data-more-info="This is/are the staff performing the test review">?</div>
+          <label for="addTestReviewStaff" class="label">Staff</label>
         </div>
-        <select id="addTestReviewTutor" name="addTestReviewTutor" class="ui dropdown search selection" multiple></select>
+        <select id="addTestReviewStaff" name="addTestReviewStaff" class="ui dropdown search selection" multiple></select>
         <br>
 
         <!-- buttons -->
@@ -448,12 +448,12 @@
         <div id="editTestReviewStudent" name="editTestReviewStudent" class="input nonEditable"></div>
         <br>
 
-        <!-- tutor(s) attending the test review -->
+        <!-- staff attending the test review -->
         <div class="inputRow">
-          <div class="more-info " data-more-info="This is/are the tutor(s) performing the test review">?</div>
-          <label for="editTestReviewTutor" class="label">Tutor(s)</label>
+          <div class="more-info " data-more-info="This is/are the staff performing the test review">?</div>
+          <label for="editTestReviewStaff" class="label">Staff</label>
         </div>
-        <select id="editTestReviewTutor" name="editTestReviewTutor" class="ui dropdown search selection" multiple></select>
+        <select id="editTestReviewStaff" name="editTestReviewStaff" class="ui dropdown search selection" multiple></select>
         <br>
 
         <!-- buttons -->
@@ -488,12 +488,12 @@
         <select id="addLessonStudent" name="addLessonStudent" class="ui dropdown search selection"></select>
         <br>
 
-        <!-- tutor(s) teaching the lesson -->
+        <!-- staff teaching the lesson -->
         <div class="inputRow">
-          <div class="more-info " data-more-info="This is/are the tutor(s) teaching the lesson">?</div>
-          <label for="addLessonTutor" class="label">Tutor(s)</label>
+          <div class="more-info " data-more-info="This is/are the staff teaching the lesson">?</div>
+          <label for="addLessonStaff" class="label">Staff</label>
         </div>
-        <select id="addLessonTutor" name="addLessonTutor" class="ui dropdown search selection" multiple></select>
+        <select id="addLessonStaff" name="addLessonStaff" class="ui dropdown search selection" multiple></select>
         <br>
         <div class="headerLine"></div>
 
@@ -540,12 +540,12 @@
         <div id="editLessonStudent" name="editLessonStudent" class="input nonEditable"></div>
         <br>
 
-        <!-- tutor(s) attending the lesson -->
+        <!-- staff attending the lesson -->
         <div class="inputRow">
-          <div class="more-info " data-more-info="This is/are the tutor(s) performing the lesson">?</div>
-          <label for="editLessonTutor" class="label">Tutor(s)</label>
+          <div class="more-info " data-more-info="This is/are the staff performing the lesson">?</div>
+          <label for="editLessonStaff" class="label">Staff</label>
         </div>
-        <select id="editLessonTutor" name="editLessonTutor" class="ui dropdown search selection" multiple></select>
+        <select id="editLessonStaff" name="editLessonStaff" class="ui dropdown search selection" multiple></select>
         <br>
 
         <!-- buttons -->
@@ -571,12 +571,12 @@
         <h3>Add Availability</h3>
         <div class="headerLine"></div>
 
-        <!-- tutor availability -->
+        <!-- staff availability -->
         <div class="inputRow">
-          <div class="more-info " data-more-info="This is the tutor that you are adding availability for">?</div>
-          <label for="addAvailabilityTutor" class="label">Tutor(s)</label>
+          <div class="more-info " data-more-info="This is the staff that you are adding availability for">?</div>
+          <label for="addAvailabilityStaff" class="label">Staff</label>
         </div>
-        <select id="addAvailabilityTutor" name="addAvailabilityTutor" class="ui dropdown search selection"></select>
+        <select id="addAvailabilityStaff" name="addAvailabilityStaff" class="ui dropdown search selection"></select>
         <br>
         <div class="headerLine"></div>
 
@@ -600,12 +600,12 @@
         <h3>Edit Availability</h3>
         <div class="headerLine"></div>
 
-        <!-- tutor availability -->
+        <!-- staff availability -->
         <div class="inputRow">
-          <div class="more-info " data-more-info="This is the tutor with this availability">?</div>
-          <label for="editAvailabilityTutor" class="label">Tutor</label>
+          <div class="more-info " data-more-info="This is the staff with this availability">?</div>
+          <label for="editAvailabilityStaff" class="label">Staff</label>
         </div>
-        <div id="editAvailabilityTutor" name="editAvailabilityTutor" class="input nonEditable"></div>
+        <div id="editAvailabilityStaff" name="editAvailabilityStaff" class="input nonEditable"></div>
         <br>
 
         <!-- buttons -->
