start of opening

--- a/public/calendar.html
+++ b/public/calendar.html
@@ -143,21 +143,14 @@
       </div>
     </div>
 
-    <!-- practice test nav options -->
-    <!-- <div class="dropdown type-practiceTest" style="display: none;">
-      <button class="dropbtn">add event</button>
+    <!-- opening nav options -->
+    <div class="dropdown type-opening" style="display: none;">
+      <button class="dropbtn">event length</button>
       <div class="dropdown-content">
-        <div onclick="setupAddSidebar('practiceTest')">Practice Test</div>
+        <div onclick="changeEventLengthOpening(1)">1</div>
+        <div onclick="changeEventLengthOpening(2)">2</div>
       </div>
-    </div> -->
-
-    <!-- secreatry nav options -->
-    <!-- <div class="dropdown type-secretary" style="display: none;">
-      <button class="dropbtn">add event</button>
-      <div class="dropdown-content">
-        <div onclick="setupAddSidebar('secretaryGeneral')">Secretary General</div>
-      </div>
-    </div> -->
+    </div>
   </div>
 
   <div id="mainCalendarContent">
