--- a/public/Forms/ACT Daily Log/Daily Log.html
+++ b/public/Forms/ACT Daily Log/Daily Log.html
@@ -151,6 +151,7 @@
                 <div onclick = "openCramSession('3')" style = 'z-index: 3;'>3-Session Cram</div>
                 <div onclick = "openCramSession('4')" style = 'z-index: 3;'>4-Session Cram</div>
                 <div onclick = "openLastSession()" style = 'z-index: 3;'>Last Session</div>
+                <input id = 'printTest' placeholder = "Print Full Test" style = 'z-index: 3;'></input>
             </div>
         </div>
 
