a whoe bunch of stuff

--- a/public/Dashboard/Admin.html
+++ b/public/Dashboard/Admin.html
@@ -328,6 +328,7 @@
         <button id="mathProgramNav" class="button">Math Program</button>
         <button id="phonicsProgramNav" class="button">Phonics Program</button>
         <button id="registrationNav" class="button">Registration</button>
+        <button id="paymentNav" class="button">Payment</button>
     </section>
 
     <section>
